# paper_atlas

./: .gitignore  AGENTS.md  Makefile  PAPER_ATLAS_BLUEPRINT.md  README.md  compose.yaml  design-qa.md  design.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.codex/agents/: data_visualization_engineer.toml  explainer_writer.toml  paper_researcher.toml  publication_reviewer.toml  site_maintainer.toml  site_reviewer.toml  visual_editor.toml  visual_implementer.toml  visual_qa.toml
.github/workflows/: ci.yml  deploy-pages.yml
apps/api/: AGENTS.md  package.json
apps/web/: AGENTS.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/worker/: AGENTS.md  package.json
docs/: agent-harness.md
docs/adr/: ADR-001-platform-architecture.md
docs/publication-reviews/: PUBLICATION_REVIEW_REVISION_11.md  PUBLICATION_REVIEW_REVISION_18.md
docs/visual-manifests/: VISUAL_MANIFEST_ATTENTION_IS_ALL_YOU_NEED.md  VISUAL_MANIFEST_COMPUTATIONAL_PROPAGANDA.md  VISUAL_MANIFEST_INKLING.md  VISUAL_MANIFEST_LLM_EVALUATORS_LANGUAGES.md  VISUAL_MANIFEST_PARTITION_PROMPT_AGGREGATE.md  (+3 more)
paper_atlas_blueprint/: 01-product-spec.md  AGENTS.md  CODEX_BOOTSTRAP_PROMPT.md  README.md  SOURCES.md  agent-harness.md  api.md  architecture.md  codex-harness.md  content-model.md  design.md  roadmap.md  skills.md
scripts/: check-agent-harness.py  check-generated.sh  check-visual-manifests.py  generate-schema.sh
specs/: M0-bootstrap.md  M3-reviewed-explainers.md
(+73 files in other folders)
