[project]
name = "paper-atlas"
version = "0.1.0"
description = "Paper Atlas API and worker packages"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "datamodel-code-generator>=0.31,<1",
  "httpx>=0.28,<1",
  "mypy>=1.15,<2",
  "pytest>=8.3,<10",
  "ruff>=0.11,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["apps/api/src", "apps/worker/src"]
testpaths = ["apps/api/tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

